@@ -598,7 +598,7 @@ void lara_col_rope_idle(ItemInfo* item, CollisionInfo* coll)
 	if (TrInput & IN_ACTION)
 	{
 		UpdateRopeSwing(item);
-		RopeSwingCollision(item, coll);
+		RopeSwingCollision(item, coll, false);
 
 		if (TrInput & IN_SPRINT)
 		{
@@ -632,7 +632,7 @@ void lara_col_rope_swing(ItemInfo* item, CollisionInfo* coll)
 	Camera.targetDistance = SECTOR(2);
 
 	UpdateRopeSwing(item);
-	RopeSwingCollision(item, coll);
+	RopeSwingCollision(item, coll, true);
 
 	if (item->Animation.AnimNumber == LA_ROPE_SWING)
 	{
